<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Titles-->
    <string name="app_name">EasyTime</string>

    <string name="action_settings">Settings</string>

    <string name="page_title_main">Main</string>
    <string name="page_title_graph">Logged Hours</string>
    <string name="page_title_export">Export Hours</string>

    <string name="title_add_stamp">Add</string>
    <string name="title_edit_stamp">Edit</string>

    <string name="title_export_range">Select export timeline</string>

    <!--Labels-->
    <string name="label_login_username">Username</string>
    <string name="label_login_password">Password</string>

    <string name="label_game_check_in">Check In</string>
    <string name="label_game_check_out">Check Out</string>

    <string name="label_login_mobile">Login with mobile</string>

    <string name="label_action_dismiss">CANCEL</string>
    <string name="label_action_save">SAVE</string>

    <string name="label_next">Next</string>

    <string name="label_start_date">From</string>
    <string name="label_end_date">To</string>

    <!--Defaults-->
    <string name="feed_default">Welcome to a new day, sunshine!</string>

    <!--Hints-->
    <string name="hint_phone_number">555&#8211;555&#8211;5555</string>
    <string name="hint_stamp_comment">Add a comment&#8230;</string>

    <!--Misc-->
    <string name="content_missing_description">Oops!</string>

    <string name="generic_error_description">There was a problem :(</string>
    <string name="no_stamps_error_description">You need to log some hours!</string>
    <string name="loading_error_description">There was a problem loading your hours</string>
    <string name="corrupt_stamps_error_description">Your hours data is corrupted, please contact us</string>

</resources>